CREATE TABLE accounts (account_id UUID PRIMARY KEY, user_id UUID NOT NULL, account_type VARCHAR(50) NOT NULL, currency CHAR(3) DEFAULT 'INR' NOT NULL, available_balance NUMERIC(18,4) CHECK (available_balance >= 0) NOT NULL, ledger_balance NUMERIC(18,4) NOT NULL, version BIGINT DEFAULT 1 NOT NULL, status VARCHAR(20) NOT NULL, tier VARCHAR(20) NOT NULL, shard_key INTEGER NOT NULL, created_at TIMESTAMPTZ NOT NULL, updated_at TIMESTAMPTZ NOT NULL);
