CREATE TABLE transactions (transaction_id UUID PRIMARY KEY, idempotency_key VARCHAR(128) UNIQUE NOT NULL, transaction_type VARCHAR(50) NOT NULL, source_account_id UUID REFERENCES accounts(account_id), destination_account_id UUID REFERENCES accounts(account_id), amount NUMERIC(18,4) CHECK (amount > 0) NOT NULL, status VARCHAR(20) NOT NULL, saga_id UUID NOT NULL, failure_reason VARCHAR(500), created_at TIMESTAMPTZ NOT NULL, completed_at TIMESTAMPTZ, metadata JSONB DEFAULT '{}');
