CREATE TABLE users (user_id UUID PRIMARY KEY, username VARCHAR(50) UNIQUE NOT NULL, email VARCHAR(255) UNIQUE NOT NULL, password_hash VARCHAR(255) NOT NULL, kyc_status VARCHAR(20) NOT NULL, created_at TIMESTAMPTZ NOT NULL);
