CREATE TABLE fraud_rules (rule_id UUID PRIMARY KEY, rule_name VARCHAR(100) NOT NULL, threshold NUMERIC(18,4) NOT NULL, action VARCHAR(50) NOT NULL, is_active BOOLEAN DEFAULT TRUE NOT NULL, created_at TIMESTAMPTZ NOT NULL);
